Fixes layout issues in Partner and Brigade pages.

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -1323,7 +1323,7 @@ blockquote {
 /* partners pages */
 .onreport.partners .main-well,
 .onreport.brigade .main-well {
-  min-width: 80em;
+//  min-width: 80em;
   @media screen and (max-width: 992px) {
     min-width: 85%;
   }
